# qwtcharts

./: CMakeLists.txt  CMakePresets.json  README.md  versions.txt
.github/workflows/: cmake-ci.yml  make-release.yml  spack-ci.yml  spack-ubuntu.yml
cmake/: FindQwt.cmake  common.cmake  organization.cmake  version.cmake  workarounds.cmake
src/: CMakeLists.txt
src/QwtCharts/: CMakeLists.txt  QtExtStringNumberFormatComboBox.cpp  QwtAxisOptionsPanel.cpp  QwtChartGeneralOptionsPanel.cpp  QwtChartOptionsDialog.cpp  QwtChartOptionsPanel.cpp  QwtChartPanel.cpp  QwtChartPrintDialog.cpp  QwtCharts.doxygen  QwtCharts.qrc  QwtChartsManager.cpp  QwtCurveChartPanel.cpp  QwtCurvesOptionsPanel.cpp  QwtExtendedMultiBarChart.cpp  QwtExtendedPlot.cpp  QwtExtendedPlotCurve.cpp  QwtExtendedPlotZoomer.cpp  QwtExtendedScaleDraw.cpp  QwtGridOptionsPanel.cpp  QwtHistogramChartPanel.cpp  QwtHistogramCoordinatesPicker.cpp  QwtHistogramOptionsPanel.cpp  QwtLegendOptionsPanel.cpp  QwtPlotCoordinatesPicker.cpp  QwtPlotCurveCoordinatesPicker.cpp  QwtUtilities.cpp
src/QwtCharts/cmake/: QwtChartsConfig.cmake.in  QwtChartsDistribution.h.in
src/QwtCharts/images/: palette
src/QwtCharts/public/QwtCharts/: QtExtStringNumberFormatComboBox.h  QwtAxisOptionsPanel.h  QwtChartGeneralOptionsPanel.h  QwtChartOptionsDialog.h  QwtChartOptionsPanel.h  QwtChartPanel.h  QwtChartPrintDialog.h  QwtChartsManager.h  QwtCurveChartPanel.h  QwtCurvesOptionsPanel.h  QwtExtendedMultiBarChart.h  QwtExtendedPlot.h  QwtExtendedPlotCurve.h  QwtExtendedPlotZoomer.h  QwtExtendedScaleDraw.h  QwtGridOptionsPanel.h  QwtHistogramChartPanel.h  QwtHistogramCoordinatesPicker.h  QwtHistogramOptionsPanel.h  QwtLegendOptionsPanel.h  QwtPlotCoordinatesPicker.h  QwtPlotCurveCoordinatesPicker.h  QwtUtilities.h
src/data/qwt/: qwt_scale_widget.cpp
src/tests/: CMakeLists.txt  QtCurvesMainWindow.cpp  curves_app.cpp
src/tests/public/: QtCurvesMainWindow.h
test_link/: CMakeLists.txt  main.cpp
